--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,24 @@ main {
   flex-direction: column;
 }
 
+/* Add this CSS to your global stylesheet or in a CSS module */
+.shadow-custom {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.hover\:scale-110:hover {
+  transform: scale(1.1);
+}
+
+.transition-transform {
+  transition: transform 0.3s ease-out;
+}
+
+.transition-shadow {
+  transition: filter 0.3s ease-out;
+}
+
+
 
 @keyframes slideInLeft {
     0% {
